--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ background-size: cover;
             <h1><b>Scavenger Hunt - Task 1</b></h1>
             <form id="team-form">
                 <label for="team-number">Team Number:</label>
-                <input type="number" id="team-number" name="team-number" min="1" max="10" required>
+                <input type="text" id="team-number" name="team-number" autocomplete="off" required>
 
                 <label for="pc-number">PC Number:</label>
-                <input type="number" id="pc-number" name="pc-number" min="1" max="20" required>
+                <input type="number" id="pc-number" name="pc-number" min="1" max="20" autocomplete="off" required>
 
                 <button type="submit">Enter</button>
             </form>
@@ -36,7 +36,7 @@ background-size: cover;
         <div id="question-section" style="display: none;">
             <h2 id="question-text">Question will appear here</h2>
             <form id="answer-form">
-                <input type="text" id="answer" name="answer" placeholder="Your Answer" required>
+                <input type="text" id="answer" name="answer" placeholder="Your Answer" autocomplete="off" required>
                 <button type="submit">Submit</button>
             </form>
             <p id="feedback"></p>
