localstorage set and fixed errors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="dsw.png">
 </head>
 <body style="
-background-image: url(Bgc1.png);
+background-image: url(bg1.jpg);
 background-size: cover;
         height: 100%;
         width: 100%;
@@ -35,7 +35,7 @@ background-size: cover;
 
         <!-- Question Section -->
         <div id="question-section" style="display: none;">
-            <h2 id="question-text">Question will appear here</h2>
+            <h2 id="question-text"> </h2>
             <form id="answer-form">
                 <input type="text" id="answer" name="answer" placeholder="Your Answer" autocomplete="off" required>
                 <button type="submit">Submit</button>
