--- a/result.html
+++ b/result.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Next Step</title>
     <link rel="stylesheet" href="style1.css" />
+    <link rel="icon" type="image/x-icon" href="dsw.png">
   </head>
   <body
     style="
